# baspy

./: .all-contributorsrc  .gitignore  LICENSE  README.md  __init__.py  _catalogue.py  _get_cubes.py  cat2.py  cat_old.py  catalogue.py  cmip5.py  cmip5.py~  cube.py  datasets.py  erai.py  get_data.py  happi.py  plot.py  pyproject.toml  region.py  upscale.py  util.py  wrf.py  xarray_examples.ipynb
IRIS/: cmip5.py  util.py
XARRAY/: __init__.py  util.py
_iris/: __init__.py  cmip5.py  cmipy.py  cube_fixes.py  downscaling.py  erai.py  get_cubes.py  happi.py  util.py
_xarray/: __init__.py  util.py
baspy/: __init__.py  catalogue.py  datasets.json
baspy/experimental/: jsh_plot.py
esmcat/: __init__.py  catalogue.py  datasets_jasmin.json  util.py
esmcat/experimental/: catalogue_subclass.py  gen_data_citation.py  get_latest_version.ipynb  jsh_plot.py
examples/: cmip6_example.py  date_range.py  erai_xr.py  recreate_catalogues.py  statistical_downscaling.py  xarray_examples.ipynb
examples/.ipynb_checkpoints/: baspy_example-checkpoint.ipynb
experimental/: FUTURE.py  catalogue_subclass.py  erai_xr.py  gen_data_citation.py  get_latest_version.py  inbuilt_pandas_for_filtering.ipynb  jsh_plot.py  optimising_catalogue.ipynb  wip.py
iris/: _get_cubes.py  util.py
notebook/: baspy_example.ipynb
notebook/.claude/: settings.local.json
notebooks/: aurora_initialise.ipynb  baspy_example.ipynb  cmip6_example.py  erai_xr.py  recreate_catalogues.py  statistical_downscaling.py
notebooks/.claude/: settings.local.json
