[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "baspy"
version = "1.9.0"
description = "A Python package for working with large climate model datasets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "xarray",
    "pandas",
    "numpy",
    "pyarrow",
]

[project.urls]
Homepage = "https://github.com/scotthosking/baspy"

[tool.setuptools.packages.find]
include = ["baspy", "baspy.*"]

[tool.setuptools.package-data]
baspy = ["datasets.json", "datasets_*.json", "catalogues/*.parquet"]
