[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "esmcat"
version = "1.9.0"
description = "A Python package for working with large climate model datasets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/scotthosking/ESMcat"

[tool.setuptools.packages.find]
include = ["esmcat", "esmcat.*"]

[tool.setuptools.package-data]
esmcat = ["datasets.json", "datasets_*.json", "catalogues/*.parquet"]
